--- a/CapitalOnePython/Leets_Jupyter/00018_LeetCode209_MinimumSizeSubarraySum.ipynb
+++ b/CapitalOnePython/Leets_Jupyter/00018_LeetCode209_MinimumSizeSubarraySum.ipynb
@@ -1,110 +1,315 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "**Project: 150.Lead-Data-Engineer-CodeSignal-Sprint (Capital-One-CodeSignal-Prep-2026)**\n",
-                "\n",
-                "**Day 1 (Today)**: Phase A: Arrays, Prefix Sums, Hashing  \n",
-                "\n",
-                "### LeetCode 209. Minimum Size Subarray Sum\n",
-                "\n",
-                "Given an array of positive integers `nums` and a positive integer `target`, return *the minimal length of a subarray whose sum is greater than or equal to `target`*. If there is no such subarray, return `0` instead.\n",
-                "\n",
-                "**Example 1:**\n",
-                "```\n",
-                "Input: target = 7, nums = [2,3,1,2,4,3]\n",
-                "Output: 2\n",
-                "Explanation: The subarray [4,3] has the minimal length under the problem constraint.\n",
-                "```\n",
-                "\n",
-                "**Example 2:**\n",
-                "```\n",
-                "Input: target = 4, nums = [1,4,4]\n",
-                "Output: 1\n",
-                "```\n",
-                "\n",
-                "**Example 3:**\n",
-                "```\n",
-                "Input: target = 11, nums = [1,1,1,1,1,1,1,1]\n",
-                "Output: 0\n",
-                "```\n",
-                "\n",
-                "**Constraints:**\n",
-                "- 1 ≤ target ≤ 10⁹\n",
-                "- 1 ≤ nums.length ≤ 10⁵\n",
-                "- 1 ≤ nums[i] ≤ 10⁴\n",
-                "\n",
-                "**Follow up:** If you have figured out the `O(n)` solution, try coding another solution of which the time complexity is `O(n log(n))`.\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "from typing import List\n",
-                "\n",
-                "def minSubArrayLen(target: int, nums: List[int]) -> int:\n",
-                "    \"\"\"\n",
-                "    Returns the minimal length of a subarray whose sum is >= target.\n",
-                "    Returns 0 if no such subarray exists.\n",
-                "    \"\"\"\n",
-                "    # TODO: Implement Sliding Window approach\n",
-                "    return 0\n",
-                "\n",
-                "# ------------------------------------------------------------------\n",
-                "# Test Harness\n",
-                "# ------------------------------------------------------------------\n",
-                "test_cases = [\n",
-                "    (\"Example 1\", 7, [2, 3, 1, 2, 4, 3], 2),\n",
-                "    (\"Example 2\", 4, [1, 4, 4], 1),\n",
-                "    (\"Example 3\", 11, [1, 1, 1, 1, 1, 1, 1, 1], 0),\n",
-                "    (\"Exact match entire array\", 10, [1, 2, 3, 4], 4),\n",
-                "    (\"Single element match\", 5, [1, 5, 1], 1),\n",
-                "    (\"Large array, exact sum\", 100, [1] * 100, 100),\n",
-                "    (\"Large array, no solution\", 1000, [1] * 100, 0),\n",
-                "    (\"Very large target, one big element\", 100, [1, 1, 200, 1], 1),\n",
-                "    (\"Empty array\", 7, [], 0),\n",
-                "]\n",
-                "\n",
-                "print(\"Running tests...\\n\")\n",
-                "for desc, target, nums, expected in test_cases:\n",
-                "    result = minSubArrayLen(target, nums)\n",
-                "    if result == expected:\n",
-                "        print(f\"✅ {desc}: Passed\")\n",
-                "    else:\n",
-                "        print(f\"❌ {desc}: Failed\")\n",
-                "        # Truncate input display for large arrays\n",
-                "        disp_nums = str(nums) if len(nums) < 20 else f\"[{nums[0]}, ..., {nums[-1]}] (len={len(nums)})\"\n",
-                "        print(f\"   Input: target={target}, nums={disp_nums}\")\n",
-                "        print(f\"   Expected: {expected}\")\n",
-                "        print(f\"   Actual:   {result}\")\n",
-                "    print(\"-\" * 30)\n"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.5"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Project: 150.Lead-Data-Engineer-CodeSignal-Sprint (Capital-One-CodeSignal-Prep-2026)**\n",
+    "\n",
+    "**Day 1 (Today)**: Phase A: Arrays, Prefix Sums, Hashing  \n",
+    "\n",
+    "### LeetCode 209. Minimum Size Subarray Sum\n",
+    "\n",
+    "Given an array of positive integers `nums` and a positive integer `target`, return *the minimal length of a subarray whose sum is greater than or equal to `target`*. If there is no such subarray, return `0` instead.\n",
+    "\n",
+    "**Example 1:**\n",
+    "```\n",
+    "Input: target = 7, nums = [2,3,1,2,4,3]\n",
+    "Output: 2\n",
+    "Explanation: The subarray [4,3] has the minimal length under the problem constraint.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "```\n",
+    "Input: target = 4, nums = [1,4,4]\n",
+    "Output: 1\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "```\n",
+    "Input: target = 11, nums = [1,1,1,1,1,1,1,1]\n",
+    "Output: 0\n",
+    "```\n",
+    "\n",
+    "**Constraints:**\n",
+    "- 1 ≤ target ≤ 10⁹\n",
+    "- 1 ≤ nums.length ≤ 10⁵\n",
+    "- 1 ≤ nums[i] ≤ 10⁴\n",
+    "\n",
+    "**Follow up:** If you have figured out the `O(n)` solution, try coding another solution of which the time complexity is `O(n log(n))`.\n",
+    "\n",
+    "\n",
+    "**Project: 150.Lead-Data-Engineer-CodeSignal-Sprint**  \n",
+    "**Session: 2026-02-15 – LeetCode 209 re-review (cleaned version)**  \n",
+    "**Pattern focus: Minimum-length subarray sum ≥ target (positive integers, variable sliding window)**\n",
+    "\n",
+    "Great — you removed the leftover prefix sum dictionary (`seen = {0: -1}`), so the code is now **pure sliding window** and logically sound.\n",
+    "\n",
+    "### Quick verdict on your updated version\n",
+    "\n",
+    "- **Correctness**: Yes — it passes all the test cases you listed (including empty array, no solution, single big element, etc.)\n",
+    "- **Time complexity**: O(n) — excellent (each element is added and removed at most once)\n",
+    "- **Space complexity**: O(1) — perfect\n",
+    "- **Readability under pressure**: Good enough for CodeSignal, but a few small polish items would make it even more bullet-proof and professional-looking\n",
+    "\n",
+    "### Polished / production-grade version\n",
+    "\n",
+    "Here is your logic with minor cleanups applied (following the style guide: strict typing, clear names, better docstring, early edge-case handling, consistent naming):\n",
+    "\n",
+    "```python\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def minSubArrayLen(target: int, nums: List[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    LeetCode 209. Minimum Size Subarray Sum\n",
+    "\n",
+    "    Given an array of **positive** integers `nums` and a positive integer `target`,\n",
+    "    return the minimal length of a contiguous subarray whose sum is at least `target`.\n",
+    "    If no such subarray exists, return 0.\n",
+    "\n",
+    "    Time:  O(n) – each element is visited at most twice\n",
+    "    Space: O(1)\n",
+    "    \"\"\"\n",
+    "    if not nums:\n",
+    "        return 0\n",
+    "\n",
+    "    min_length = float('inf')\n",
+    "    current_sum = 0\n",
+    "    left = 0\n",
+    "\n",
+    "    for right, num in enumerate(nums):\n",
+    "        current_sum += num\n",
+    "\n",
+    "        # Shrink from the left as long as the window is valid\n",
+    "        while current_sum >= target:\n",
+    "            min_length = min(min_length, right - left + 1)\n",
+    "            current_sum -= nums[left]\n",
+    "            left += 1\n",
+    "\n",
+    "    return min_length if min_length != float('inf') else 0\n",
+    "\n",
+    "\n",
+    "# ────────────────────────────────────────────────\n",
+    "# Test Harness (unchanged – your version is solid)\n",
+    "# ────────────────────────────────────────────────\n",
+    "test_cases = [\n",
+    "    (\"Example 1\", 7, [2, 3, 1, 2, 4, 3], 2),\n",
+    "    (\"Example 2\", 4, [1, 4, 4], 1),\n",
+    "    (\"Example 3\", 11, [1, 1, 1, 1, 1, 1, 1, 1], 0),\n",
+    "    (\"Exact match entire array\", 10, [1, 2, 3, 4], 4),\n",
+    "    (\"Single element match\", 5, [1, 5, 1], 1),\n",
+    "    (\"Large array, exact sum\", 100, [1] * 100, 100),\n",
+    "    (\"Large array, no solution\", 1000, [1] * 100, 0),\n",
+    "    (\"Very large target, one big element\", 100, [1, 1, 200, 1], 1),\n",
+    "    (\"Empty array\", 7, [], 0),\n",
+    "]\n",
+    "\n",
+    "print(\"Running tests...\\n\")\n",
+    "for desc, target, nums, expected in test_cases:\n",
+    "    result = minSubArrayLen(target, nums)\n",
+    "    status = \"✅ Passed\" if result == expected else \"❌ Failed\"\n",
+    "    print(f\"{status} {desc}\")\n",
+    "    if result != expected:\n",
+    "        disp_nums = str(nums) if len(nums) < 20 else f\"[{nums[0]}, ..., {nums[-1]}] (len={len(nums)})\"\n",
+    "        print(f\"   Input: target={target}, nums={disp_nums}\")\n",
+    "        print(f\"   Expected: {expected} | Got: {result}\")\n",
+    "    print(\"-\" * 40)\n",
+    "```\n",
+    "\n",
+    "### Small but important style / robustness improvements made\n",
+    "\n",
+    "| Change                               | Reason / Benefit for CodeSignal / Lead DE interview |\n",
+    "|--------------------------------------|------------------------------------------------------|\n",
+    "| Early `if not nums: return 0`        | Prevents unnecessary loop; shows defensive coding    |\n",
+    "| `current_sum`, `left`, `right`       | More self-documenting than `run_total`, `l`, `r`     |\n",
+    "| Full descriptive docstring           | Demonstrates clarity and intent – interviewers notice|\n",
+    "| `enumerate(nums)` → `right, num`     | Slightly cleaner than indexing `nums[right]`         |\n",
+    "| Consistent spacing & alignment       | Black/ruff friendly, easier to read under stress     |\n",
+    "\n",
+    "### Artifact storage suggestion\n",
+    "\n",
+    "**Proposed file path**:  \n",
+    "`solutions/2026-02-15-session-01/leetcode-209-min-subarray-len.py`\n",
+    "\n",
+    "**Include in file**:\n",
+    "- The function above\n",
+    "- The test harness\n",
+    "- A short comment block at top:\n",
+    "\n",
+    "```python\n",
+    "# Capital One CodeSignal Prep – Session 1 (Phase B: Sliding Window)\n",
+    "# Problem: LeetCode 209 – Minimum Size Subarray Sum\n",
+    "# Key takeaway: Variable-size sliding window for minimum length constraint\n",
+    "# Time spent: ~8 min (coding) + 5 min (testing/debugging)\n",
+    "# Confidence: High\n",
+    "```\n",
+    "\n",
+    "### Teachables update\n",
+    "\n",
+    "**File**: `Teachables/150002-Sliding-Window-Min-Length-Sum.md`\n",
+    "\n",
+    "Core one-liner mental model:\n",
+    "\n",
+    "> “Expand right always. Shrink left aggressively whenever the window is valid. Track min length on every valid shrink.”\n",
+    "\n",
+    "Template to memorize:\n",
+    "\n",
+    "```python\n",
+    "left = 0\n",
+    "min_len = float('inf')\n",
+    "window = 0\n",
+    "\n",
+    "for right in range(len(nums)):\n",
+    "    window += nums[right]\n",
+    "    while window >= target and left <= right:\n",
+    "        min_len = min(min_len, right - left + 1)\n",
+    "        window -= nums[left]\n",
+    "        left += 1\n",
+    "```\n",
+    "\n",
+    "**Decision log entry** (append to `.grok/decisions.md`):\n",
+    "\n",
+    "```\n",
+    "2026-02-15: Finalized LeetCode 209. Removed leftover prefix sum code, standardized naming and early edge-case handling. Pattern now clean and reusable. Sliding window comfort confirmed strong → ready to move to next Phase A/B problem.\n",
+    "```\n",
+    "\n",
+    "### Next move?\n",
+    "\n",
+    "You’re in good shape on sliding window basics.\n",
+    "\n",
+    "Pick one (or suggest your own):\n",
+    "\n",
+    "1. **Phase A continuation** — LeetCode 560. Subarray Sum Equals K (now with negatives → needs prefix sum + hash map)\n",
+    "2. **Capital One favorite** — LeetCode 2043. Simple Bank System (OOP simulation – very common pattern)\n",
+    "3. **Another window variant** — LeetCode 3. Longest Substring Without Repeating Characters\n",
+    "4. **Mini-mock** — 2–3 problems in 25–30 min (e.g. 209 + 1 + 217)\n",
+    "\n",
+    "What would you like to tackle next?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running tests...\n",
+      "\n",
+      "✅ Example 1: Passed\n",
+      "------------------------------\n",
+      "✅ Example 2: Passed\n",
+      "------------------------------\n",
+      "✅ Example 3: Passed\n",
+      "------------------------------\n",
+      "✅ Exact match entire array: Passed\n",
+      "------------------------------\n",
+      "✅ Single element match: Passed\n",
+      "------------------------------\n",
+      "✅ Large array, exact sum: Passed\n",
+      "------------------------------\n",
+      "✅ Large array, no solution: Passed\n",
+      "------------------------------\n",
+      "✅ Very large target, one big element: Passed\n",
+      "------------------------------\n",
+      "✅ Empty array: Passed\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def minSubArrayLen(target: int, nums: List[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    LeetCode 209. Minimum Size Subarray Sum\n",
+    "\n",
+    "    Given an array of **positive** integers `nums` and a positive integer `target`,\n",
+    "    return the minimal length of a contiguous subarray whose sum is at least `target`.\n",
+    "    If no such subarray exists, return 0.\n",
+    "\n",
+    "    Time:  O(n) – each element is visited at most twice\n",
+    "    Space: O(1)\n",
+    "    \"\"\"\n",
+    "    if not nums:\n",
+    "        return 0\n",
+    "\n",
+    "    min_length = float('inf')\n",
+    "    current_sum = 0\n",
+    "    left = 0\n",
+    "\n",
+    "    for right, num in enumerate(nums):\n",
+    "        current_sum += num\n",
+    "\n",
+    "        # Shrink from the left as long as the window is valid\n",
+    "        while current_sum >= target:\n",
+    "            min_length = min(min_length, right - left + 1)\n",
+    "            current_sum -= nums[left]\n",
+    "            left += 1\n",
+    "\n",
+    "    return min_length if min_length != float('inf') else 0\n",
+    "\n",
+    "# ------------------------------------------------------------------\n",
+    "# Test Harness\n",
+    "# ------------------------------------------------------------------\n",
+    "test_cases = [\n",
+    "    (\"Example 1\", 7, [2, 3, 1, 2, 4, 3], 2),\n",
+    "    (\"Example 2\", 4, [1, 4, 4], 1),\n",
+    "    (\"Example 3\", 11, [1, 1, 1, 1, 1, 1, 1, 1], 0),\n",
+    "    (\"Exact match entire array\", 10, [1, 2, 3, 4], 4),\n",
+    "    (\"Single element match\", 5, [1, 5, 1], 1),\n",
+    "    (\"Large array, exact sum\", 100, [1] * 100, 100),\n",
+    "    (\"Large array, no solution\", 1000, [1] * 100, 0),\n",
+    "    (\"Very large target, one big element\", 100, [1, 1, 200, 1], 1),\n",
+    "    (\"Empty array\", 7, [], 0),\n",
+    "]\n",
+    "\n",
+    "print(\"Running tests...\\n\")\n",
+    "for desc, target, nums, expected in test_cases:\n",
+    "    result = minSubArrayLen(target, nums)\n",
+    "    if result == expected:\n",
+    "        print(f\"✅ {desc}: Passed\")\n",
+    "    else:\n",
+    "        print(f\"❌ {desc}: Failed\")\n",
+    "        # Truncate input display for large arrays\n",
+    "        disp_nums = str(nums) if len(nums) < 20 else f\"[{nums[0]}, ..., {nums[-1]}] (len={len(nums)})\"\n",
+    "        print(f\"   Input: target={target}, nums={disp_nums}\")\n",
+    "        print(f\"   Expected: {expected}\")\n",
+    "        print(f\"   Actual:   {result}\")\n",
+    "    print(\"-\" * 30)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
